added weather api and weather lookup form

--- a/web-server/templates/views/index.hbs
+++ b/web-server/templates/views/index.hbs
@@ -10,6 +10,13 @@
   <body>
     <div class="main-content">
       {{>header}}
+      <p>Get the Weather</p>
+      <form>
+        <input placeholder="location">
+        <button>Search</button>
+      </form>
+      <p id="message-one"></p>
+      <p id="message-two"></p>
     </div>
     {{>footer}}
   </body>
